@@ -32,8 +32,8 @@
 void inline escape_query_str( wxString * Str )
 {
   Str->Replace( _T( "'" ), _T( "''" ) );
-  Str->Replace( _T( "\"" ), _T( "\"\"" ) );
-  Str->Replace( _T( "\\" ), _T( "\\\\" ) );
+  //Str->Replace( _T( "\"" ), _T( "\"\"" ) );
+  //Str->Replace( _T( "\\" ), _T( "\\\\" ) );
 }
 
 // -------------------------------------------------------------------------------- //
